[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = "1.0.203"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
mongodb = "2.8.2"
dotenv = "0.15.0"
futures = "0.3"
jsonschema = "0.18.0"
pyo3 = { version = "0.22.0", features = ["extension-module", "auto-initialize"] }
